feat(meta): Add Meta Change Endpoint
